# tilelang-npu

./: .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  SUPPORT.md  THIRDPARTYNOTICES.txt  VERSION  ascend.cc  ascend.h  codegen_npuir.cc  format.sh  install.sh  install_amd.sh  install_ascend.sh  install_cpu.sh  install_cuda.sh  install_npuir.sh  install_rocm.sh  pyproject.toml  requirements-build.txt  requirements-dev.txt  requirements-lint.txt  requirements-test.txt  requirements.txt  setup.py  tox.ini
.github/workflows/: bot.yml  ci.yml  publish_docs.yml  reminder.yml
benchmark/: benchmark_matmul.py
benchmark/blocksparse_attention/: benchmark_configs.py  benchmark_library_dense_fmha.py  benchmark_tilelang_block_sparse_fmha.py  benchmark_torch_block_sparse_fmha.py  benchmark_triton_block_sparse_fmha.py
benchmark/matmul/: benchmark_matmul.py  benchmark_matmul_intrinsic.py
benchmark/matmul_fp8/: benchmark_matmul.py
deprecated/docs/: Installation.md
docker/: Dockerfile.cu118  Dockerfile.cu120  Dockerfile.cu121  Dockerfile.cu123  Dockerfile.cu124  Dockerfile.cu125  Dockerfile.cu126  Dockerfile.cu128  Dockerfile.rocm  README.md
docs/: CNAME  Installation.md  Makefile  README.md  conf.py  index.md  index.rst  language_ref.md  npu runtime.md  npu tilelibrary.md  privacy.md  privacy.rst  requirements.txt
docs/deeplearning_operators/: convolution.rst  deepseek_mla.md  elementwise.md  flash_attention.md  flash_linear_attention.rst  gemv.md  gemv.rst  matmul.md  matmul.rst  matmul_dequant.rst  tmac_gpu.rst
docs/get_started/: Installation.md  Installation.rst  language_ref.rst  overview.md  overview.rst
docs/language_ref/: ast.md  primitives.md  tilelibrary.md
docs/tutorials/: annotate_memory_layout.rst  auto_tuning.md  debug_tools_for_tilelang.md  debug_tools_for_tilelang.rst  jit_compilation.md  pipelining_computations_and_data_movements.md  vec_add_tutorials.md  writing_kernels_with_thread_primitives.rst  writing_kernels_with_tilelibrary.rst  writint_kernels_with_thread_primitives.rst
examples/: quickstart.py
examples/analyze/: README.md  example_conv_analyze.py  example_gemm_analyze.py  test_example_analyze.py
examples/bitnet-1.58b/: README.md  benchmark.sh  benchmark_generate.py  benchmark_inference_latency.py  benchmark_model_10k_loops.py  eval_correctness.py  eval_gpu_memory.py  eval_ppl.py  eval_utils.py  load_from_quantized.py  nvidia_measure_memory.sh  utils_quant.py
examples/blocksparse_attention/: block_sparse_attn_tilelang.py  block_sparse_attn_triton.py  example_sparse_gqa_decode_varlen_indice.py  example_sparse_gqa_decode_varlen_mask.py  example_tilelang_block_sparse_attn.py  example_tilelang_sparse_gqa_decode_varlen_indice.py  example_tilelang_sparse_gqa_decode_varlen_mask.py  example_triton_sparse_gqa_decode_varlen_indice.py  example_triton_sparse_gqa_decode_varlen_mask.py  heuristic.py  test_example_blocksparse_attention.py
examples/blocksparse_gemm/: example_blocksparse_gemm.py  test_example_blocksparse_gemm.py
examples/cast/: example_group_per_split_token_cast_to_fp8.py  example_per_token_cast_to_fp8.py  example_triton_cast_to_fp8.py  test_example_cast.py
examples/convolution/: example_convolution.py  test_example_convolution.py
examples/cumsum/: example_tilelang_cumsum.py
examples/deepseek_deepgemm/: example_deepgemm_fp8_2xAcc.py
examples/deepseek_mla/: README.md  benchmark_mla.py  example_mla_decode.py  example_mla_decode_amd.py  example_mla_decode_paged.py  test_example_mla_decode.py  torch_refs.py
examples/deepseek_nsa/: example_tilelang_nsa_bwd.py  example_triton_nsa_bwd.py  example_triton_nsa_fwd.py  reference.py
examples/dequantize_gemm/: README.md  example_dequant_gemm.py  example_dequant_gemm_fine_grained.py  example_dequant_gemm_fp4_hopper.py  example_dequant_gemv_fp16xint4.py  test_example_dequantize_gemm.py
examples/dynamic/: example_dynamic.py
examples/dynamic_shape/: test_example_dynamic.py
examples/elementwise/: elementwise_add.py  example_elementwise_add.py  test_example_elementwise.py
examples/flash_attention/: README.md  example_gqa_bwd.py  example_gqa_fwd_bshd.py  example_gqa_fwd_bshd_wgmma_pipelined.py  example_mha.py  example_mha_bwd.py  example_mha_bwd_wgmma_pipelined.py  example_mha_fwd_bhsd.py  example_mha_fwd_bhsd_wgmma_pipelined.py  example_mha_fwd_bshd.py  example_mha_fwd_bshd_wgmma_pipelined.py  example_mha_fwd_varlen.py  example_mha_inference.py
examples/flash_decoding/: README.md  example_gqa_decode.py  example_mha_inference.py  example_mla_decode.py  example_sparse_gqa_decode_varlen.py  heuristic.py  test_example_flash_decoding.py
examples/gemm/: README.md  example_gemm.py  example_gemm_autotune.py  example_gemm_intrinsics.py  example_gemm_schedule.py  test_example_gemm.py
examples/gemm_fp8/: README.md  example_tilelang_gemm_fp8.py  example_tilelang_gemm_fp8_2xAcc.py  example_tilelang_gemm_fp8_intrinsic.py  test_example_gemm_fp8.py
examples/gemm_splitk/: example_tilelang_gemm_splitk.py
examples/gemm_streamk/: example_tilelang_gemm_streamk.py
examples/gemv/: example_gemv.py  test_example_gemv.py
examples/grouped_gemm/: example_grouped_gemm_bwd.py  example_grouped_gemm_fwd.py
examples/linear_attention/: README.md  example_mamba_chunk_scan.py  example_mamba_chunk_state.py  example_retnet.py
examples/native_sparse_attention/: example_tilelang_nsa.py  example_tilelang_nsa_bwd.py  example_tilelang_nsa_decode.py  example_tilelang_nsa_fwd.py  example_tilelang_nsa_fwd_varlen.py  example_triton_nsa.py  example_triton_nsa_fwd.py  example_triton_nsa_fwd_varlen.py  reference.py  requirements.txt
examples/norm/: rms_norm.py
examples/plot_layout/: README.md  fragment_mma_load_a.py
examples/seer_attention/: block_sparse_attn_tilelang.py  block_sparse_attn_triton.py  (+1 more)
npu_example/: README.md  flash_attn_npuir.py  instruction.md  mm_basic.py  mm_trans.py  npu_ws.py  vec_add.py  vec_add_1d.py
npuir_example/: test_vec_add_1d_nofor.py
src/: ir.cc
src/op/: op.cc  (+17 more)
tilelang/: __init__.py  _ffi_api.py  env.py  libinfo.py  version.py
(+364 files in other folders)
